package com.hangman;

public class Launcher {
    public static void main(String[] args) {
        GUI.main(args);
    }
}
