@startuml

title __HANGMAN's Class Diagram__\n

  namespace com.hangman {
    class com.hangman.DemoBox2D {
    }
  }
  

  namespace com.hangman {
    class com.hangman.GUI {
    }
  }
  

  namespace com.hangman {
    class com.hangman.Game {
    }
  }
  

  namespace com.hangman {
    class com.hangman.GraphicalRiddle {
    }
  }
  

  namespace com.hangman {
    class com.hangman.Launcher {
    }
  }
  

  namespace com.hangman {
    class com.hangman.PhysicalEngine {
    }
  }
  

  namespace com.hangman {
    class com.hangman.RenderEngine {
    }
  }
  

  namespace com.hangman {
    class com.hangman.Riddle {
    }
  }
  

  namespace com.hangman {
    class com.hangman.YetAnotherTestPolymophism {
    }
  }
  

  namespace com.hangman {
    class com.hangman.testRiddle {
    }
  }
  

  namespace com.sword {
    class com.sword.Sword {
    }
  }
  

  namespace com.sword {
    class com.sword.testSword {
    }
  }
  

  com.hangman.GUI -up-|> javafx.application.Application
  com.hangman.GUI o-- com.hangman.PhysicalEngine : physicalEngine
  com.hangman.GUI o-- com.hangman.RenderEngine : renderEngine
  com.hangman.GraphicalRiddle -up-|> com.hangman.Riddle
  com.hangman.RenderEngine o-- com.hangman.PhysicalEngine : physicalEngine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
